# Coin

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.yaml  config.yaml
.github/workflows/: rust.yml
contract-runtime/: Cargo.toml
contract-runtime/examples/: counter.rs  simple.rs  token.rs
contract-runtime/src/: lib.rs
contract-runtime/tests/: runtime.rs
contract-sdk/: Cargo.toml
contract-sdk/src/: lib.rs
http-api/: Cargo.toml
http-api/src/: lib.rs
http-api/tests/: http_api.rs
miner/: Cargo.toml
miner/benches/: mining.rs
miner/src/: lib.rs
p2p/: Cargo.toml
p2p/src/: config.rs  lib.rs  main.rs  rpc.rs
p2p/tests/: consensus.rs  handshake.rs  network.rs  persistence.rs  rpc.rs  vote.rs
proto/: Cargo.toml  build.rs
proto/proto/: transaction.proto
proto/src/: lib.rs
src/: block.rs  blockchain.rs  blockfile.rs  lib.rs  transaction.rs  utils.rs  utxofile.rs
stake/: Cargo.toml
stake/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: bip32.rs  bip39.rs  lib.rs  wordlist_chinese_simplified.in  wordlist_russian.in  wordlist_spanish.in
wallet/tests/: cli.rs
