[workspace]
members = [
    "proto",
    "p2p",
    "miner",
    "wallet",
    "stake",
    "contract-runtime",
    "http-api",
]

[package]
name = "coin"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex = "0.4"
coin-proto = { path = "proto" }
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secp256k1 = { version = "0.27", features = ["recovery"] }
ripemd = "0.1"
bincode = "1"
contract-runtime = { path = "contract-runtime" }

[dev-dependencies]
tempfile = "3"
proptest = "1"
