[package]
name = "coin-http"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
coin-proto = { path = "../proto" }
coin-p2p = { path = "../p2p" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
