[package]
name = "coin-http"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
coin-proto = { path = "../proto" }
coin-p2p = { path = "../p2p" }
secp256k1 = { version = "0.27", features = ["recovery", "rand"] }
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
coin = { path = ".." }
