[package]
name = "miner"
version = "0.1.0"
edition = "2024"

[dependencies]
coin = { path = ".." }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
coin-wallet = { path = "../wallet" }
hex-literal = "0.4"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "mining"
harness = false
