[package]
name = "coin-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
coin-proto = { path = "../proto" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal", "fs"] }
coin = { path = ".." }
sha2 = "0.10"
hex = "0.4"
miner = { path = "../miner" }
secp256k1 = { version = "0.27", features = ["recovery", "rand"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio-socks = "0.5"
bincode = "1"
jsonrpc-lite = "0.6.1"

[dev-dependencies]
coin-wallet = { path = "../wallet" }
hex-literal = "0.4"
tempfile = "3"
proptest = "1"
