[package]
name = "coin-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
hex = "0.4"
bs58 = "0.5"
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.27", features = ["rand"] }
pbkdf2 = "0.12"
hmac = "0.12"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread"] }
anyhow = "1"
serde_json = "1"
coin-proto = { path = "../proto" }
coin = { path = ".." }
coin-p2p = { path = "../p2p" }

[dev-dependencies]
hex-literal = "0.4"
assert_cmd = "2"
tempfile = "3"
coin-p2p = { path = "../p2p" }
